# midpilot-smart-integration

./: .dockerignore  .env-example  .env.test-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  server.py
src/: app.py  config.py  router.py  utils.py
src/common/: errors.py  langfuse.py  llm.py  logger.py  output_parsers.py  schema.py
src/modules/: utils.py
src/modules/complex_pairing/: prompts.py  router.py  schema.py  service.py
src/modules/correlation/: prompts.py  router.py  schema.py  service.py
src/modules/extension_att/: prompts.py  router.py  schema.py  service.py
src/modules/focus_type/: prompts.py  router.py  schema.py  service.py
src/modules/mapping/: prompts.py  router.py  schema.py  service.py
src/modules/matching/: prompts.py  router.py  schema.py  schema_examples.py  service.py
src/modules/object_type/: prompts.py  router.py  schema.py  service.py
test/: __init__.py
test/integration/: test_app.py
test/integration/common/: test_llm_retry.py
test/integration/modules/complex_pairing/: test_complex_pairing_endpoint.py
test/integration/modules/correlation/: test_correlation_endpoint.py
test/integration/modules/extension_att/: test_extension_att_endpoint.py
test/integration/modules/focus_type/: test_focus_type_endpoint.py
test/integration/modules/mapping/: test_mapping_endpoint.py
test/integration/modules/matching/: test_matching_endpoint.py
test/integration/modules/object_type/: test_object_type_endpoint.py
test/unit/: conftest.py
test/unit/common/: test_api_conventions.py  test_clean_description.py  test_logger.py  test_output_parsers.py  test_utils.py
test/unit/modules/: utils.py
test/unit/modules/mapping/: test_mapping_service.py
(+6 files in other folders)
